--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.4.0",
     "express": "^4.18.2",
-    "react-dom": "^19.2.0",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.554.0",
     "react": "^19.2.0",
-    "lucide-react": "^0.554.0"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
